update css file

--- a/assignment4/src/assets/css/componentcss.css
+++ b/assignment4/src/assets/css/componentcss.css
@@ -1,11 +1,16 @@
 .gameContainer{
     text-align: center;
-    margin: 20px
+    margin: 20px;
 }
 
 .table{
     margin: 0 auto;
     border-collapse: collapse;
     width: 100%;
-    border: 1px solid #ff9900
+    border: 1px solid #ff9900;
+}
+
+.result-col,animalname-col{
+    text-align: center;
+    color: #ff9900;
 }
