--- a/assignment4/src/assets/css/componentcss.css
+++ b/assignment4/src/assets/css/componentcss.css
@@ -14,3 +14,31 @@
     text-align: center;
     color: #ff9900;
 }
+
+.animalgrid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+    background-color: #6d8de6;
+  }
+  
+  .animalgrid-item{
+      width: max-content;
+      height: max-content;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      cursor: pointer;
+      transition: transform 0.2s;
+      background-color: #ff9900;
+  }
+  
+  .animalgrid-item:hover {
+      transform: scale(1.1);
+    }
+  
+    .animal-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
